--- a/theme/snippets/bold-loyalties-modal.liquid
+++ b/theme/snippets/bold-loyalties-modal.liquid
@@ -9,7 +9,7 @@
 			<a href="#" class="bold-modal-close-btn slick-modal-close">
 				<i class="fa fa-times" aria-hidden="true"></i>
 			</a>
-			<h3 class="m-t-0">{{shop.metafields.bold_loyalties.modal_heading}}</h3>
+			<h3 class="mt-0">{{shop.metafields.bold_loyalties.modal_heading}}</h3>
 			<p class="alert alert-success bold-success">{{shop.metafields.bold_loyalties.modal_thank_you_message}}</p>
 		</div>
 
