--- a/theme/snippets/contact-form.liquid
+++ b/theme/snippets/contact-form.liquid
@@ -17,7 +17,7 @@
   {% endif %}
 
   <div class="col-xs-12 col-sm-12" id="contactFormWrapper">
-    <div class="description text-left m-b-1">
+    <div class="description text-left mb-1">
       {% if contact_title == blank %}
         <h1 class="text-serif text-normal">{{settings.homepage_contact_title}}</h1>
       {% else %}
