--- a/theme/templates/index.liquid
+++ b/theme/templates/index.liquid
@@ -48,14 +48,14 @@
       replaceImage2: settings.homepage_featured_collection_2_custom_image,
       replaceImage2With: 'homepage_featured_collection_2_custom_image.jpeg',
       withOffset: true,
-      classWrapperDefault: 'm-t-3 m-b-1',
-      classWrapperSize2: 'm-t-3 m-b-1 m-x-1-md m-x-2-lg',
+      classWrapperDefault: 'm-t-3 mb-1',
+      classWrapperSize2: 'm-t-3 mb-1 m-x-1-md m-x-2-lg',
       showHr: true
     %}
     
     {% include 'featured-products',
       collectionHandle: 'featured-products',
-      classWrapper: 'm-y-1',
+      classWrapper: 'my-1',
       textAlign: settings.homepage_featured_products_text_align
       titleClass: 'text-sans-serif text-normal'
     %}
