--- a/theme/templates/page.designer_a-z.liquid
+++ b/theme/templates/page.designer_a-z.liquid
@@ -18,8 +18,8 @@
             {% include 'featured-collections',
                 featuredLinklist: 'featured-collections',
                 withOffset: true,
-                classWrapperDefault: 'm-t-3 m-b-1',
-                classWrapperSize2: 'm-t-3 m-b-1 m-x-1-md m-x-2-lg'
+                classWrapperDefault: 'm-t-3 mb-1',
+                classWrapperSize2: 'm-t-3 mb-1 m-x-1-md m-x-2-lg'
             %}
 
         </div>
