--- a/theme/templates/search.liquid
+++ b/theme/templates/search.liquid
@@ -18,7 +18,7 @@ selectors inside search.css.
       
       <div class="row">
         <div class="col-xs-12 col-md-6 col-md-offset-3 text-center">
-          <form action="/search" method="get" class="search-form form-inline m-b-1" role="search">
+          <form action="/search" method="get" class="search-form form-inline mb-1" role="search">
             <div class="form-group">
               <input name="q" type="search" class="form-control" id="search-field" placeholder="{{ 'navbar.shop_actions.search' | t }}" value="{{ search.terms | escape }}" />
             </div>
