--- a/src/scss/theme-test.scss
+++ b/src/scss/theme-test.scss
@@ -23,6 +23,7 @@
 @import '../../bower_components/jumplink-components/scss/backgrounds';
 @import '../../bower_components/jumplink-components/scss/navbar';
 @import '../../bower_components/jumplink-components/scss/carousel';
+@import '../../bower_components/jumplink-components/scss/spacing';
 
 @import '../../bower_components/slick-carousel/slick/slick.scss';
 @import '../../bower_components/slick-carousel/slick/slick-theme.scss';
@@ -33,6 +34,7 @@
 @import 'sidebar';
 @import 'images';
 @import 'list-collections';
+@import 'collection';
 @import 'pagination';
 @import 'footer';
 @import 'typography';
