--- a/theme/snippets/article-comment.liquid
+++ b/theme/snippets/article-comment.liquid
@@ -1,4 +1,4 @@
-<div d="{{ comment.id }}" class="media comment m-y-1">
+<div d="{{ comment.id }}" class="media comment my-1">
   <div class="media-left">
     <gravatar data-hash="{{ comment.email | remove: ' ' | strip_newlines | downcase | md5 }}" data-placeholders='[ {{ 'anita-avatar-01.jpg' | asset_url | json }}, {{ 'anita-avatar-02.jpg' | asset_url | json }}, {{ 'anita-avatar-03.jpg' | asset_url | json }}, {{ 'anita-avatar-04.jpg' | asset_url | json }}, {{ 'anita-avatar-05.jpg' | asset_url | json }} ]' data-replace="true" class="media-object img-circle"></gravatar>
   </div>
