--- a/theme/snippets/article-comments.liquid
+++ b/theme/snippets/article-comments.liquid
@@ -51,7 +51,7 @@
                 </div>
             </div>
 
-            <div class="col-xs-12 col-md-offset-2 col-md-8 m-b-1">
+            <div class="col-xs-12 col-md-offset-2 col-md-8 mb-1">
                 
                 {% comment %}Comment submission form.{% endcomment %}
                 {% form "new_comment", article %}
