--- a/theme/snippets/jumplink-collection-grid-item.liquid
+++ b/theme/snippets/jumplink-collection-grid-item.liquid
@@ -1,8 +1,6 @@
-{% comment %}If no value is passed to the snippet, we will set the snippet variable to a sensible default.{% endcomment %}
-
 <div class="collection-item m-3">
 
-  <div class="collection-image-wrap">
+  <div class="image-wrap">
     <a href="{{ collection.url }}">
       {% if collection.image %}
         {% assign image = collection | img_url: 'grande' %}
@@ -12,7 +10,7 @@
         {% assign title = collection.title | escape %}
       {% endif %}
       <div class="background-box {{ settings.collections_aspect_ratio }}" style="background-image: url({{ image }});" title="{{ title }}"></div>
-      <div class="collection-caption">
+      <div class="caption text-nowrap">
         {{ collection.title }}
       </div>
     </a>
