--- a/theme/snippets/newsletter-form.liquid
+++ b/theme/snippets/newsletter-form.liquid
@@ -11,7 +11,7 @@
 {% endcomment %}
 
 {% if settings.homepage_newsletter_enable %}
-  <div class="text-center m-y-1" id="newsletter-form">
+  <div class="text-center my-1" id="newsletter-form">
     <div class="row ah-bg-newsletter p-y-3">
       <div class="col-xs-12 col-md-4 col-md-offset-4">
         <h1 class="sans-serif"><strong>{{ 'home.newsletter.title' | t }}</strong></h1>
