--- a/theme/snippets/product-photo-carousel.liquid
+++ b/theme/snippets/product-photo-carousel.liquid
@@ -8,9 +8,9 @@
         {% for image in product.images %}
             <div class="row">
                 {% if is_modal %}
-                    <div class="col-xs-12 m-b-1 product-photo-carousel-modal-thumbs" id="product-photo-carousel-modal-thumbs-{{product.handle}}">
+                    <div class="col-xs-12 mb-1 product-photo-carousel-modal-thumbs" id="product-photo-carousel-modal-thumbs-{{product.handle}}">
                 {% else %}
-                    <div class="col-xs-12 m-b-1 product-photo-carousel-thumbs" id="product-photo-carousel-thumbs-{{product.handle}}">
+                    <div class="col-xs-12 mb-1 product-photo-carousel-thumbs" id="product-photo-carousel-thumbs-{{product.handle}}">
                 {% endif %}
                     <div data-index="{{ forloop.index0 }}" class="product-photo-carousel-thumb">
                         <div class="{{ thumb_img_class }}" style="background-image: url({{ image | img_url: 'grande' }});" title="{{ image.alt | escape }}"></div>
@@ -23,9 +23,9 @@
         {% if product.metafields.jumplink_video.preview_url and product.metafields.jumplink_video.mp4_url and is_modal == false  %}
             <div class="row">
                 {% if is_modal %}
-                    <div class="col-xs-12 m-b-1 product-photo-carousel-modal-thumbs" id="product-photo-carousel-modal-thumbs-{{product.handle}}">
+                    <div class="col-xs-12 mb-1 product-photo-carousel-modal-thumbs" id="product-photo-carousel-modal-thumbs-{{product.handle}}">
                 {% else %}
-                    <div class="col-xs-12 m-b-1 product-photo-carousel-thumbs" id="product-photo-carousel-thumbs-{{product.handle}}">
+                    <div class="col-xs-12 mb-1 product-photo-carousel-thumbs" id="product-photo-carousel-thumbs-{{product.handle}}">
                 {% endif %}
                     <div data-index="{{ product.images | size }}" class="product-photo-carousel-thumb">
                         <div class="{{ thumb_img_class }}" style="background-image: url({{ product.metafields.jumplink_video.preview_url }});" title="{{ product.title }}"></div>
