--- a/theme/templates/cart.liquid
+++ b/theme/templates/cart.liquid
@@ -17,7 +17,7 @@
 
             <div>
               <form action="/cart" method="post" class="row">
-                <div class="col-xs-12 p-b-1">
+                <div class="col-xs-12 pb-1">
                   <h3>Warenkorb</h3>
                   <input type="submit" name="checkout" value="Weiter zur Kasse" class="btn btn-primary pull-right" />
                 </div>
