--- a/theme/templates/collection.liquid
+++ b/theme/templates/collection.liquid
@@ -4,37 +4,36 @@
   - Never paginate by more than 50.
 {% endcomment %}
 
-<div class="container-fluid">
+<div class="container pt-5">
   {% paginate collection.products by settings.products_per_page %}
 
     <div class="row">
-      <div data-collection-filter="true" class="col-xs-12 col-md-3 col-lg-2">
-        {% include 'collection-filter'%}
+      <div data-collection-filter="true" class="col-xs-12 col-md-2 col-lg-2 pt-5">
+        {% include 'jumplink-collection-filter'%}
       </div>
-      <div data-collection-products="true" class="col-xs-12 col-md-9 col-lg-10">
+      <div data-collection-products="true" class="col-xs-12 col-md-10 col-lg-10 offset-xs-0 offset-md-2 offset-lg-2 ">
         {% if collection.title != 'All' %}
-          <div data-collection-description="true" class="row">
+          <div data-collection-description="true" class="row mb-4">
             {% if collection.image %}
-              <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4 p-b-1 p-b-0-xs">
-                <div class="background-box ratio-4-3" style="background-image:url( {{ collection.image | img_url: 'grande' }} )" alt="{{ collection.title }}"></div>
-              </div>
-              <div class="col-xs-12 col-sm-6 col-md-7 col-lg-8">
+              <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8">
                 {% if collection.description.size > 0 %}
-                  <div class="p-b-1">
-                    <h2 class="collection-title m-t-0">
+                  <div class="pb-1">
+                    <h1 class="collection-title mt-0 mb-5 text-center">
                       {{ collection.title }}
-                    </h2>
+                    </h1>
                     <div class="rte">
                       {{ collection.description }}
                     </div>
                   </div>
                 {% endif %}
               </div>
+              <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                <div class="background-box ratio-1-2" style="background-image:url( {{ collection.image | img_url: 'grande' }} )" alt="{{ collection.title }}"></div>
+              </div>
             {% else %}
-
               {% if collection.description.size > 0 %}
-                <div class="col-xs-12 p-b-1">
-                  <h1 class="collection-title m-t-0">
+                <div class="col-xs-12 pb-1">
+                  <h1 class="collection-title mt-0">
                     {{ collection.title }}
                   </h1>
                   <div class="rte">
@@ -46,18 +45,20 @@
             {% endif %}
           </div>
         {% endif %}
-        <div class="row">
-          {% for product in collection.products %}
-            <div class="col-xs-6 col-sm-4 col-md-4 col-lg-3">
-              {% include 'product-grid-item' with settings.products_per_page %}
-            </div>
-          {% else %}
-            <div class="col-xs-12 text-center m-y-1">
-              <p>{{ 'collection.general.empty' | t }}</p>
-            </div>
-          {% endfor %}
-          <div class="col-xs-12">
-            {% include 'pagination', show_all_active: true %}
+        <div class="-mx-2">
+          <div class="row">
+              {% for product in collection.products %}
+                <div class="col-xs-6 col-sm-4 col-md-4 col-lg-4">
+                  {% include 'jumplink-product-grid-item' with settings.products_per_page %}
+                </div>
+              {% else %}
+                <div class="col-xs-12 text-center my-1">
+                  <p>{{ 'collection.general.empty' | t }}</p>
+                </div>
+              {% endfor %}
+              <div class="col-xs-12">
+                {% include 'pagination', show_all_active: true %}
+              </div>
           </div>
         </div>
       </div>
