--- a/theme/templates/page.locations.liquid
+++ b/theme/templates/page.locations.liquid
@@ -1,7 +1,7 @@
 <div class="ah-container-fluid">
   <div class="container-fluid">
     <h1 class="hidden">{{ page.title }}</h1>
-    <div class="row m-y-1">
+    <div class="row my-1">
       <div class="col-xs-12 col-md-6 col-lg-8 rte">
         {{ page.content }}
       </div>
@@ -11,7 +11,7 @@
       {% capture image %}location_block_{{ i }}_image{% endcapture %}
       {% capture title %}location_block_{{ i }}_title{% endcapture %}
       {% capture text %}location_block_{{ i }}_text{% endcapture %}
-      <div class="row m-y-1">
+      <div class="row my-1">
         <div class="col-xs-12 col-md-offset-1 col-md-5 col-lg-offset-2 col-lg-4">
           <div class="background-box ratio-16-9" style="background-image: url({{ image | asset_url }});" title="{{ settings[title] | escape }}"></div>
         </div>
