--- a/theme/templates/page.treatments.liquid
+++ b/theme/templates/page.treatments.liquid
@@ -2,7 +2,7 @@
   <div class="container-fluid">
 
     <h1 class="hidden">{{ page.title }}</h1>
-    <div class="row m-y-1">
+    <div class="row my-1">
       <div class="col-xs-12 col-md-6 col-lg-8 rte">
         {{ page.content }}
       </div>
@@ -11,7 +11,7 @@
     {% for i in (1..6) %}
       {% capture image %}homepage_block_{{ i }}_image{% endcapture %}
       {% capture title %}homepage_block_{{ i }}_title{% endcapture %}
-      <div class="row m-y-1">
+      <div class="row my-1">
         <div class="col-xs-12 col-md-offset-1 col-md-5 col-lg-offset-2 col-lg-4">
           <div class="background-box ratio-16-9" style="background-image: url({{ image | asset_url }});" title="{{ settings[title] | escape }}"></div>
         </div>
