--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -20,6 +20,7 @@ b, strong {
     letter-spacing: 0.1rem;
 }
     
-.list-group-item, .nav-link {
+.list-group-item, .nav-link, .nav-item .dropdown-toggle {
     letter-spacing: 0.1em;
+    font-size: 0.9rem;
 }
