--- a/theme/snippets/powertools-filter-menu.liquid
+++ b/theme/snippets/powertools-filter-menu.liquid
@@ -25,7 +25,7 @@
             {% assign header_handle = menu_header.first | split: '-' %}
             {% assign header_handle = menu_header.first | replace: header_handle.first, '' %}
             <div class="filter-group m-y-0 p-y-05 filter-group{{ header_handle }}">
-                <p class="text-normal filter-group-title m-b-0">{{ shop.metafields.pt_filter_header[menu_header.first] }}</p>
+                <p class="text-normal filter-group-title mb-0">{{ shop.metafields.pt_filter_header[menu_header.first] }}</p>
                 <div class="scroll-content">
                     <ul class="nav{{ header_handle }}">
                         {% for menu_item in menu_items %}
