--- a/theme/templates/collection.liquid
+++ b/theme/templates/collection.liquid
@@ -8,17 +8,17 @@
   {% paginate collection.products by settings.products_per_page %}
 
     <div class="row">
-      <div data-collection-filter="true" class="col-xs-12 col-md-2 col-lg-2 pt-5">
+      <div data-collection-filter="true" class="col-xs-12 col-md-2 col-lg-2">
         {% include 'jumplink-collection-filter'%}
       </div>
       <div data-collection-products="true" class="col-xs-12 col-md-10 col-lg-10 offset-xs-0 offset-md-2 offset-lg-2 ">
         {% if collection.title != 'All' %}
-          <div data-collection-description="true" class="row mb-4">
+          <div data-collection-description="true" class="row">
             {% if collection.image %}
-              <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8">
+              <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8 mb-4">
                 {% if collection.description.size > 0 %}
                   <div class="pb-1">
-                    <h1 class="collection-title mt-0 mb-5 text-center">
+                    <h1 class="collection-title mt-0 mb-4 text-center">
                       {{ collection.title }}
                     </h1>
                     <div class="rte">
@@ -45,8 +45,9 @@
             {% endif %}
           </div>
         {% endif %}
-        <div class="-mx-2">
-          <div class="row">
+        {% if customer %}
+          <div class="-mx-2">
+            <div class="row">
               {% for product in collection.products %}
                 <div class="col-xs-6 col-sm-4 col-md-4 col-lg-4">
                   {% include 'jumplink-product-grid-item' with settings.products_per_page %}
@@ -59,8 +60,11 @@
               <div class="col-xs-12">
                 {% include 'pagination', show_all_active: true %}
               </div>
+            </div>
           </div>
-        </div>
+        {% else %}
+          not logged in
+        {% endif %}
       </div>
 
     </div>
