--- a/theme/templates/customers/account.liquid
+++ b/theme/templates/customers/account.liquid
@@ -19,7 +19,7 @@
             <div class="col-xs-12 col-md-3">
                 <div class="well">
                     <h2 class="h4">{{ 'customer.account.details' | t }}</h2>
-                    <h3 class="h5 m-b-0">{{ customer.name }}</h3>
+                    <h3 class="h5 mb-0">{{ customer.name }}</h3>
                     <p class="">
                         {{ customer.email }}
                     </p>
