--- a/theme/templates/customers/order.liquid
+++ b/theme/templates/customers/order.liquid
@@ -1,139 +1,137 @@
-<div class="ah-container-fluid">
-  <div class="container-fluid">
-    <div class="row">
+<div class="container">
+  <div class="row">
 
 
 
-        <section id="order" class="section-wrap">
-          <div class="col-xs-12">
-            <div id="admin_header" class="clearfix">
-              <h1 class="page-header">{{ 'customer.account.title' | t }}</h1>
-              <h3>{{ 'customer.order.title' | t: name: order.name }}</h3>
-              <div class="action_link action_return note pull-right" id='return_to_store'><a href="/account">{{ 'customer.account.return' | t }}</a></div>
-              <p class="order_date">{{ 'customer.order.date' | t: date: order.created_at | date: "%B %d, %Y %I:%M%p" }}</p>
-            
-              {% if order.cancelled %}
-                <div id="order_cancelled" class="alert alert-warning">
-                                  {% assign cancelled_at = order.cancelled_at | date: "%B %d, %Y %I:%M%p" %}
-                  <h5 id="order_cancelled_title">{{ 'customer.order.cancelled' | t: date: cancelled_at }}</h5>
-                  <span class="note">{{ 'customer.order.cancelled_reason' | t: reason: order.cancel_reason }}</span>
-                </div>
-              {% endif %}
-            </div>
+      <section id="order" class="section-wrap">
+        <div class="col-xs-12">
+          <div id="admin_header" class="clearfix">
+            <h1 class="page-header">{{ 'customer.account.title' | t }}</h1>
+            <h3>{{ 'customer.order.title' | t: name: order.name }}</h3>
+            <div class="action_link action_return note pull-right" id='return_to_store'><a href="/account">{{ 'customer.account.return' | t }}</a></div>
+            <p class="order_date">{{ 'customer.order.date' | t: date: order.created_at | date: "%B %d, %Y %I:%M%p" }}</p>
+          
+            {% if order.cancelled %}
+              <div id="order_cancelled" class="alert alert-warning">
+                                {% assign cancelled_at = order.cancelled_at | date: "%B %d, %Y %I:%M%p" %}
+                <h5 id="order_cancelled_title">{{ 'customer.order.cancelled' | t: date: cancelled_at }}</h5>
+                <span class="note">{{ 'customer.order.cancelled_reason' | t: reason: order.cancel_reason }}</span>
+              </div>
+            {% endif %}
           </div>
+        </div>
 
-          <div class="col-xs-12 col-md-3">
-            <div class="order">
-            
-              <div class="well order-address">
-                <div class="row">
-                  <div class="order-billing col col-md-6">
-                    <h4 class="order_section_title">{{ 'customer.order.billing_address' | t }}</h4>
-                    <p>
-                      <strong>{{ 'customer.order.payment_status' | t }}:</strong> <span class="status_{{ order.financial_status }}">{{ order.financial_status }}</span>
-                    </p>
-                  
+        <div class="col-xs-12 col-md-3">
+          <div class="order">
+          
+            <div class="well order-address">
+              <div class="row">
+                <div class="order-billing col col-md-6">
+                  <h4 class="order_section_title">{{ 'customer.order.billing_address' | t }}</h4>
+                  <p>
+                    <strong>{{ 'customer.order.payment_status' | t }}:</strong> <span class="status_{{ order.financial_status }}">{{ order.financial_status }}</span>
+                  </p>
+                
+                  <address>
+                    {{ order.billing_address.name }}<br>
+                    {{ order.billing_address.company }}<br>
+                    {{ order.billing_address.street }}<br>
+                    {{ order.billing_address.city }}, {{ order.billing_address.province }}<br>
+                    {{ order.billing_address.country }} {{ order.billing_address.zip }}<br>
+                    {{ order.billing_address.phone }}
+                  </address>
+                </div>
+                <div class="order_shipping col col-md-6">
+                  {% if order.shipping_address %}
+                    <h4 class="order_section_title">{{ 'customer.order.shipping_address' | t }}</h4>
+                    <p><strong>{{ 'customer.order.fulfillment_status' | t }}:</strong> <span class="status_{{ order.fulfillment_status }}">{{ order.fulfillment_status }}</span></p>
+                    
                     <address>
-                      {{ order.billing_address.name }}<br>
-                      {{ order.billing_address.company }}<br>
-                      {{ order.billing_address.street }}<br>
-                      {{ order.billing_address.city }}, {{ order.billing_address.province }}<br>
-                      {{ order.billing_address.country }} {{ order.billing_address.zip }}<br>
-                      {{ order.billing_address.phone }}
+                      {{ order.shipping_address.name }}<br>
+                      {{ order.shipping_address.company }}<br>
+                      {{ order.shipping_address.street }}<br>
+                      {{ order.shipping_address.city }}, {{ order.shipping_address.province }}<br>
+                      {{ order.shipping_address.country }} {{ order.shipping_address.zip }}<br>
+                      {{ order.shipping_address.phone }}
                     </address>
-                  </div>
-                  <div class="order_shipping col col-md-6">
-                    {% if order.shipping_address %}
-                      <h4 class="order_section_title">{{ 'customer.order.shipping_address' | t }}</h4>
-                      <p><strong>{{ 'customer.order.fulfillment_status' | t }}:</strong> <span class="status_{{ order.fulfillment_status }}">{{ order.fulfillment_status }}</span></p>
-                      
-                      <address>
-                        {{ order.shipping_address.name }}<br>
-                        {{ order.shipping_address.company }}<br>
-                        {{ order.shipping_address.street }}<br>
-                        {{ order.shipping_address.city }}, {{ order.shipping_address.province }}<br>
-                        {{ order.shipping_address.country }} {{ order.shipping_address.zip }}<br>
-                        {{ order.shipping_address.phone }}
-                      </address>
-                    {% endif %}
-                  </div>
+                  {% endif %}
                 </div>
               </div>
             </div>
           </div>
-
-          <div class="col-xs-12 col-md-9">
-            <div class="order-details table-responsive">
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th>{{ 'customer.order.product' | t }}</th>
-                    <th>{{ 'customer.order.sku' | t }}</th>
-                    <th>{{ 'customer.order.quantity' | t }}</th>
-                    <th class="money">{{ 'customer.order.price' | t }}Price</th>
-                    <th class="total money">{{ 'customer.order.total' | t }}</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  {% for line_item in order.line_items %}
-                    <tr id="{{ line_item.id }}" class="{% cycle 'odd', 'even' %}">
-                      <td class="product">
-                        {{ line_item.title | link_to: line_item.product.url }} 
-                        {% if line_item.fulfillment %}
-                          <div class="note">
-                            {% assign created_at = line_item.fulfillment.created_at | date: format: 'month_day_year' %}
-                            {{ 'customer.order.fulfilled_at' | t: date: created_at }}
-                            {% if line_item.fulfillment.tracking_number %}
-                              <a href="{{ line_item.fulfillment.tracking_url }}">{{ line_item.fulfillment.tracking_company }} #{{ line_item.fulfillment.tracking_number}}</a>
-                            {% endif %}
-                          </div>
-                        {% endif %}
-                      </td>
-                      <td class="sku note">{{ line_item.sku }}</td>
-                      <td class="quantity">{{ line_item.quantity }}</td>
-                      <td class="money">{{ line_item.price | money }}</td>
-                      <td class="total money">{{ line_item.quantity | times: line_item.price | money }}</td>
-                    </tr>
-                  {% endfor %}
-                </tbody>
-                <tfoot>
-                  <tr class="order_summary note">
-                    <td colspan="4">{{ 'customer.order.subtotal' | t }}</td>
-                    <td class="total money">{{ order.subtotal_price | money }}</td>
-                  </tr>   
-            
-                  {% for discount in order.discounts %}
-                    <tr class="order_summary discount">
-                      <td colspan="4">{{ discount.code }} {{ 'customer.order.discount' | t }}</td>
-                      <td class="total money">{{ discount.savings | money }}</td>
-                    </tr>
-                  {% endfor %}
-            
-                  {% for shipping_method in order.shipping_methods %}
-                    <tr class="order_summary note">
-                      <td colspan="4">{{ 'customer.order.shipping' | t }} ({{ shipping_method.title }})</td>
-                      <td class="total money">{{ shipping_method.price | money }}</td>
-                    </tr>
-                  {% endfor %}
-                
-                  {% for tax_line in order.tax_lines %}
-                    <tr class="order_summary note">
-                      <td colspan="4">{{ 'customer.order.tax' | t }} ({{ tax_line.title }} {{ tax_line.rate | times: 100 }}%)</td>
-                      <td class="total money">{{ tax_line.price | money }}</td>
-                    </tr>
-                  {% endfor %}    
-                        
-                  <tr class="order_summary order_total">
-                    <td colspan="4">{{ 'customer.order.total' | t }}</td>
-                    <td class="total money">{{ order.total_price | money }} {{ order.currency }}</td>
-                  </tr>   
-                </tfoot>  
-              </table>
-            </div>
-          </div>
         </div>
 
+        <div class="col-xs-12 col-md-9">
+          <div class="order-details table-responsive">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>{{ 'customer.order.product' | t }}</th>
+                  <th>{{ 'customer.order.sku' | t }}</th>
+                  <th>{{ 'customer.order.quantity' | t }}</th>
+                  <th class="money">{{ 'customer.order.price' | t }}Price</th>
+                  <th class="total money">{{ 'customer.order.total' | t }}</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for line_item in order.line_items %}
+                  <tr id="{{ line_item.id }}" class="{% cycle 'odd', 'even' %}">
+                    <td class="product">
+                      {{ line_item.title | link_to: line_item.product.url }} 
+                      {% if line_item.fulfillment %}
+                        <div class="note">
+                          {% assign created_at = line_item.fulfillment.created_at | date: format: 'month_day_year' %}
+                          {{ 'customer.order.fulfilled_at' | t: date: created_at }}
+                          {% if line_item.fulfillment.tracking_number %}
+                            <a href="{{ line_item.fulfillment.tracking_url }}">{{ line_item.fulfillment.tracking_company }} #{{ line_item.fulfillment.tracking_number}}</a>
+                          {% endif %}
+                        </div>
+                      {% endif %}
+                    </td>
+                    <td class="sku note">{{ line_item.sku }}</td>
+                    <td class="quantity">{{ line_item.quantity }}</td>
+                    <td class="money">{{ line_item.price | money }}</td>
+                    <td class="total money">{{ line_item.quantity | times: line_item.price | money }}</td>
+                  </tr>
+                {% endfor %}
+              </tbody>
+              <tfoot>
+                <tr class="order_summary note">
+                  <td colspan="4">{{ 'customer.order.subtotal' | t }}</td>
+                  <td class="total money">{{ order.subtotal_price | money }}</td>
+                </tr>   
+          
+                {% for discount in order.discounts %}
+                  <tr class="order_summary discount">
+                    <td colspan="4">{{ discount.code }} {{ 'customer.order.discount' | t }}</td>
+                    <td class="total money">{{ discount.savings | money }}</td>
+                  </tr>
+                {% endfor %}
+          
+                {% for shipping_method in order.shipping_methods %}
+                  <tr class="order_summary note">
+                    <td colspan="4">{{ 'customer.order.shipping' | t }} ({{ shipping_method.title }})</td>
+                    <td class="total money">{{ shipping_method.price | money }}</td>
+                  </tr>
+                {% endfor %}
+              
+                {% for tax_line in order.tax_lines %}
+                  <tr class="order_summary note">
+                    <td colspan="4">{{ 'customer.order.tax' | t }} ({{ tax_line.title }} {{ tax_line.rate | times: 100 }}%)</td>
+                    <td class="total money">{{ tax_line.price | money }}</td>
+                  </tr>
+                {% endfor %}    
+                      
+                <tr class="order_summary order_total">
+                  <td colspan="4">{{ 'customer.order.total' | t }}</td>
+                  <td class="total money">{{ order.total_price | money }} {{ order.currency }}</td>
+                </tr>   
+              </tfoot>  
+            </table>
+          </div>
+        </div>
       </div>
+
     </div>
   </div>
 </div>
