--- a/theme/templates/index.liquid
+++ b/theme/templates/index.liquid
@@ -4,7 +4,7 @@
     <div class="row">
       {% for collection in collections %}
         <div class="col-xs-12 col-sm-6 col-md-4 col-xl-4">
-          {% include 'collection-grid-item' %}
+          {% include 'jumplink-collection-grid-item' %}
         </div>
       {% endfor %}
     </div>
