--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -59,7 +59,7 @@
   {% comment %}
     Main Navigation 
   {% endcomment %}
-  {% include 'navbar' %}
+  {% include 'jumplink-navbar' %}
 
   <div id="barba-wrapper">
     <div class="barba-container"
@@ -160,9 +160,9 @@
     </div>
   </div>
 
-  {% include 'footer' %}
+  {% include 'jumplink-footer' %}
 
-  {% include 'preload-images' %}
+  {% include 'jumplink-preload-images' %}
 
 </body>
 </html>
