more apps to (de)activate

--- a/theme/templates/collection.liquid
+++ b/theme/templates/collection.liquid
@@ -62,6 +62,7 @@
               </div>
             </div>
           </div>
+          customer id: {{customer.id}}
         {% else %}
           not logged in
         {% endif %}
