--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -38,13 +38,12 @@
   <script src="{{'customer_area.js'  | shopify_asset_url}}"></script>
   <script src="{{'api.jquery.js'  | shopify_asset_url}}"></script>
   <script src="{{'option_selection.js'  | shopify_asset_url}}"></script>
-  {% comment %}
+
   <script>
-  if(videojs) {
-    videojs.options.flash.swf = "{{'video-js.swf'  | asset_url}}"
-  }
+    if(typeof(videojs) !== 'undefined' && typeof(videojs.options) !== 'undefined' && typeof(videojs.options.flash) !== 'undefined' ) {
+      videojs.options.flash.swf = "{{'video-js.swf'  | asset_url}}"
+    }
   </script>
-  {% endcomment %}
 
   <link rel="stylesheet" href="{{ 'social/social-icons.css' | global_asset_url }}">
   <link rel="stylesheet" href="{{ 'theme.scss.css' | asset_url }}" id="alertifyCSS">
