--- a/theme/assets/theme.scss.liquid
+++ b/theme/assets/theme.scss.liquid
@@ -6220,7 +6220,7 @@ pre {
 // width for fluid, full width layouts.
 
 @if $enable-grid-classes {
-  .container-fluid {
+  .container {
     @include make-container();
   }
 }
