--- a/theme/snippets/collection-link-list-with-letters.liquid
+++ b/theme/snippets/collection-link-list-with-letters.liquid
@@ -43,7 +43,7 @@
     {% endif %}
 
     <div class="col-xs-12 col-sm-6 col-md-3">
-        <ul class="list-group list-group-with-letters p-t-05">
+        <ul class="list-group list-group-with-letters pt-05">
             
             {% for l in _linklists %}
                 {% assign total_skipped = total_skipped | plus: skipped %}
