--- a/theme/snippets/jumplink-navbar-dropdown-cart.liquid
+++ b/theme/snippets/jumplink-navbar-dropdown-cart.liquid
@@ -13,7 +13,7 @@
             <div data-cart-view="data-cart-view">
                 <form action="/cart" method="post">
                     <div class="border px-1 bottom table-color">
-                        <div rv-show="cart.item_count | gt 0" class="text-right p-b-05">
+                        <div rv-show="cart.item_count | gt 0" class="text-right pb-1">
                             <input type="submit" name="checkout" value="Zur Kasse" class="btn btn-primary" />
                         </div>
                     </div>
