--- a/theme/snippets/newsletter-form.liquid
+++ b/theme/snippets/newsletter-form.liquid
@@ -12,7 +12,7 @@
 
 {% if settings.homepage_newsletter_enable %}
   <div class="text-center my-1" id="newsletter-form">
-    <div class="row ah-bg-newsletter p-y-3">
+    <div class="row ah-bg-newsletter py-3">
       <div class="col-xs-12 col-md-4 col-md-offset-4">
         <h1 class="sans-serif"><strong>{{ 'home.newsletter.title' | t }}</strong></h1>
         <p>{{ 'home.newsletter.text' | t }}</p>
