--- a/theme/snippets/storepickup-custom.liquid
+++ b/theme/snippets/storepickup-custom.liquid
@@ -1,4 +1,4 @@
-<div id="storePickupApp" class="p-y-1">
+<div id="storePickupApp" class="py-1">
     <style type="text/css">
  
         #storePickupApp {
