--- a/theme/templates/page.imprint.liquid
+++ b/theme/templates/page.imprint.liquid
@@ -1,21 +1,19 @@
-<div class="ah-container-fluid">
-    <div class="container">
-        <div class="row p-y-1">
-            <div class="col-xs-12">
-                <h1 class="text-center hidden">{{ page.title }}</h1>
-            </div>
-            <div class="col-xs-12 rte">
-                {{ page.content }}
-                
-                <p>
-                    <br />   
-                    Credits
-                    <br />
-                    <a href="http://www.selam-x.com/">Design by Selam X</a>
-                    <br />
-                    <a href="https://www.jumplink.eu/">Design & Development by Jumplink</a>
-                </P>
-            </div>
+<div class="container">
+    <div class="row py-1">
+        <div class="col-xs-12">
+            <h1 class="text-center hidden">{{ page.title }}</h1>
+        </div>
+        <div class="col-xs-12 rte">
+            {{ page.content }}
+            
+            <p>
+                <br />   
+                Credits
+                <br />
+                <a href="feinfineart.de">Design by feinfineart</a>
+                <br />
+                <a href="https://www.jumplink.eu/">Design & Development by JumpLink</a>
+            </P>
         </div>
     </div>
 </div>
