--- a/theme/snippets/article-detail.liquid
+++ b/theme/snippets/article-detail.liquid
@@ -14,12 +14,12 @@
       {{ article.title }}
     </h1>
 
-    <div class="p-y-1">
-      <gravatar data-hash="{{article.user.email | remove: ' ' | strip_newlines | downcase | md5}}" class="center-block max-width-50" data-placeholders='[ {{ 'anita-avatar-01.jpg' | asset_url | json }}, {{ 'anita-avatar-02.jpg' | asset_url | json }}, {{ 'anita-avatar-03.jpg' | asset_url | json }}, {{ 'anita-avatar-04.jpg' | asset_url | json }}, {{ 'anita-avatar-05.jpg' | asset_url | json }} ]'></gravatar>
-      <div class="text-center p-t-05 article-name">
+    <div class="py-1">
+      <gravatar data-hash="{{article.user.email | remove: ' ' | strip_newlines | downcase | md5}}" class="center-block max-width-50" data-placeholders='[ {{ 'avatar-01.jpg' | asset_url | json }}, {{ 'avatar-02.jpg' | asset_url | json }}, {{ 'avatar-03.jpg' | asset_url | json }}, {{ 'avatar-04.jpg' | asset_url | json }}, {{ 'avatar-05.jpg' | asset_url | json }} ]'></gravatar>
+      <div class="text-center pt-05 article-name">
         von {{article.user.first_name | default: 'Unbekannt'}} {{article.user.last_name}}
         <br>
-        am <time class="p-y-1" pubdate datetime="{{ article.published_at | date: '%Y-%m-%d' }}">{{ article.published_at | date: '%d.%m.%Y' }}</time>
+        am <time class="py-1" pubdate datetime="{{ article.published_at | date: '%Y-%m-%d' }}">{{ article.published_at | date: '%d.%m.%Y' }}</time>
       </div>
     </div>
 
@@ -39,12 +39,12 @@
 <div class="article-footer row">
 
   <div class="col-xs-12">
-    <div class="social-links center-block p-y-1">
+    <div class="social-links center-block py-1">
       {% include 'social-links' %}
     </div>
   </div>
 
-  <div class="col-xs-12 p-y-1">
+  <div class="col-xs-12 py-1">
     <h3 class="text-normal">Read Next:</h3>
     <div class="row next">
       {% assign count = 0 %}
@@ -58,7 +58,7 @@
   </div>
 
   {% if border %}
-    <div class="col-xs-12"> <hr class="m-y-0"> </div>
+    <div class="col-xs-12"> <hr class="my-0"> </div>
   {% endif %}
 
 </div>
