--- a/theme/snippets/article-list-item.liquid
+++ b/theme/snippets/article-list-item.liquid
@@ -1,4 +1,4 @@
-<div class="col-xs-12 p-y-1">
+<div class="col-xs-12 py-1">
   <article data-handle="{{article.handle}}" class="row">
     <div class="col-xs-12 col-md-4 col-lg-3 col-lg-offset-1">
     
@@ -9,9 +9,9 @@
     </div>
     <div class="col-xs-12 col-md-8 col-lg-7">
 
-      <div class="hidden-xs p-t-05">
+      <div class="hidden-xs pt-05">
         <div class="media">
-          <gravatar data-hash="{{article.user.email | remove: ' ' | strip_newlines | downcase | md5}}" class="media-left media-middle" data-placeholders='[ {{ 'anita-avatar-01.jpg' | asset_url | json }}, {{ 'anita-avatar-02.jpg' | asset_url | json }}, {{ 'anita-avatar-03.jpg' | asset_url | json }}, {{ 'anita-avatar-04.jpg' | asset_url | json }}, {{ 'anita-avatar-05.jpg' | asset_url | json }} ]'></gravatar>
+          <gravatar data-hash="{{article.user.email | remove: ' ' | strip_newlines | downcase | md5}}" class="media-left media-middle" data-placeholders='[ {{ 'avatar-01.jpg' | asset_url | json }}, {{ 'avatar-02.jpg' | asset_url | json }}, {{ 'avatar-03.jpg' | asset_url | json }}, {{ 'avatar-04.jpg' | asset_url | json }}, {{ 'avatar-05.jpg' | asset_url | json }} ]'></gravatar>
           <div class="media-body media-middle">
             {{article.user.first_name | default: 'Unbekannt'}} {{article.user.last_name}}
           </div>
@@ -25,8 +25,8 @@
       {% comment %} small divices {% endcomment %}
       <div class="row visible-xs-block">
         <div class="col-xs-12 p-y-05">
-          <h1 class="text-center text-serif text-normal p-t-05">{{article.title}}</h1>
-          <gravatar data-hash="{{article.user.email | remove: ' ' | strip_newlines | downcase | md5}}" class="center-block" data-placeholders='[ {{ 'anita-avatar-01.jpg' | asset_url | json }}, {{ 'anita-avatar-02.jpg' | asset_url | json }}, {{ 'anita-avatar-03.jpg' | asset_url | json }}, {{ 'anita-avatar-04.jpg' | asset_url | json }}, {{ 'anita-avatar-05.jpg' | asset_url | json }} ]'></gravatar>
+          <h1 class="text-center text-serif text-normal pt-05">{{article.title}}</h1>
+          <gravatar data-hash="{{article.user.email | remove: ' ' | strip_newlines | downcase | md5}}" class="center-block" data-placeholders='[ {{ 'avatar-01.jpg' | asset_url | json }}, {{ 'avatar-02.jpg' | asset_url | json }}, {{ 'avatar-03.jpg' | asset_url | json }}, {{ 'avatar-04.jpg' | asset_url | json }}, {{ 'avatar-05.jpg' | asset_url | json }} ]'></gravatar>
           <div class="text-center">
             von {{article.user.first_name | default: 'Unbekannt'}} {{article.user.last_name}}
           </div>
