--- a/theme/snippets/jumplink-collection-grid-item.liquid
+++ b/theme/snippets/jumplink-collection-grid-item.liquid
@@ -1,4 +1,4 @@
-<div class="collection-item m-3">
+<div class="collection-item mx-3 my-4">
 
   <div class="image-wrap">
     <a href="{{ collection.url }}">
