--- a/theme/snippets/jumplink-navbar-breadcrumbs.liquid
+++ b/theme/snippets/jumplink-navbar-breadcrumbs.liquid
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-breadcrumbs no-border row m-y-0">
+<nav class="navbar navbar-default navbar-breadcrumbs no-border row my-0">
 
     <div class="hidden-xs col-sm-8">
       {% include 'breadcrumbs' %}
