--- a/theme/snippets/jumplink-navbar-dropdown-designer.liquid
+++ b/theme/snippets/jumplink-navbar-dropdown-designer.liquid
@@ -9,7 +9,7 @@
                     <div class="row p-y-05">
                         <div class="designer-dropdown-col col-xs-6 col-md-3 border px-1 right">
                             <div class="m-x-05">
-                                <p class="title text-uppercase p-t-0 p-b-05 designer-col-1">Designer</p>
+                                <p class="title text-uppercase pt-0 pb-1 designer-col-1">Designer</p>
                                 {% for designerLink in linklists.designer-col-1.links %}
                                     <p class="text-size-1">
                                         <a href="{{ designerLink.url }}" title="{{ designerLink.title }}">
@@ -23,7 +23,7 @@
                         <div class="designer-dropdown-col col-xs-6 col-md-3 border px-1 right">
                             <div class="m-x-05">
                                 {% assign menu-size = linklists.designer-col-2.links | size %}
-                                <p class="title text-uppercase p-t-0 p-b-05 designer-col-2">{{ linklists.designer-col-2.title | replace: '#', menu-size }}</p>
+                                <p class="title text-uppercase pt-0 pb-1 designer-col-2">{{ linklists.designer-col-2.title | replace: '#', menu-size }}</p>
                                 {% for designerLink in linklists.designer-col-2.links %}
                                     <p class="text-size-1 ">
                                         <a href="{{ designerLink.url }}" title="{{ designerLink.title }}">
@@ -36,7 +36,7 @@
                         </div>
                         <div class="designer-dropdown-col col-xs-6 col-md-3 border px-1 right">
                             <div class="m-x-05">
-                                <p class="title text-uppercase text-center p-t-0 p-b-05">{{ collections.top-designer-col-3.title }}</p>
+                                <p class="title text-uppercase text-center pt-0 pb-1">{{ collections.top-designer-col-3.title }}</p>
                                 <div class="row">
                                     {% include 'featured-products',
                                         collectionHandle: 'top-designer-col-3',
@@ -50,7 +50,7 @@
                         </div>
                         <div class="designer-dropdown-col col-xs-6 col-md-3">
                             <div class="m-x-05">
-                                <p class="title text-uppercase text-center p-t-0 p-b-05">{{ linklists.designer-col-4.title }}</p>
+                                <p class="title text-uppercase text-center pt-0 pb-1">{{ linklists.designer-col-4.title }}</p>
                                 <div class="row">
                                     {% include 'featured-collections',
                                         featuredLinklist: 'designer-col-4',
