--- a/theme/snippets/powertools-filter-menu-select.liquid
+++ b/theme/snippets/powertools-filter-menu-select.liquid
@@ -8,7 +8,7 @@
             {% assign menu_items = menu_header.last | split: ',' %}
             {% assign header_handle = menu_header.first | split: '-' %}
             {% assign header_handle = menu_header.first | replace: header_handle.first, '' %}
-            <div class="clearfix filter filter-group-select filter-group{{ header_handle }} form-group m-y-0 p-y-05">
+            <div class="clearfix filter filter-group-select filter-group{{ header_handle }} form-group my-0 p-y-05">
                 <!--<label>{{ shop.metafields.pt_filter_header[menu_header.first] }}</label>-->
                 <select
                     class="full-width styled-select coll-filter coll-filter-{{ collection.handle }} nav-{{ menu_header.first | split: '-' | last }}"
