--- a/theme/snippets/powertools-filter-menu.liquid
+++ b/theme/snippets/powertools-filter-menu.liquid
@@ -11,7 +11,7 @@
     {{ shop.metafields.pt_filter_css['user'] }}
 </style>
 <div class="filter-menu filter-selected-{{ collection.handle }}{% for tag in current_tags %} filter-selected-{{ tag | handleize }}{% endfor %}">
-    <div class="filter-group m-y-0 p-b-05 p-t-1 refine-header">
+    <div class="filter-group my-0 pb-1 p-t-1 refine-header">
         <p class="mt-0 hidden TODO"><strong>{{ pt_refine_text }}</strong></p>
         {% unless collection.handle == 'all' or collection.handle == nil and current_tags == nil %}
             <a class="filter-clear" href="/collections/all">
@@ -24,7 +24,7 @@
             {% assign menu_items = menu_header.last | split: ',' %}
             {% assign header_handle = menu_header.first | split: '-' %}
             {% assign header_handle = menu_header.first | replace: header_handle.first, '' %}
-            <div class="filter-group m-y-0 p-y-05 filter-group{{ header_handle }}">
+            <div class="filter-group my-0 p-y-05 filter-group{{ header_handle }}">
                 <p class="text-normal filter-group-title mb-0">{{ shop.metafields.pt_filter_header[menu_header.first] }}</p>
                 <div class="scroll-content">
                     <ul class="nav{{ header_handle }}">
@@ -93,7 +93,7 @@
         {% comment %}
         {% assign current_collection_handle_sep = current_collection_handle | prepend: '|' | append: '|' %}
         {% unless displayed_collection_handles contains current_collection_handle_sep or current_collection_handle == 'all' %}
-            <div class="filter-group m-y-0 p-y-05 filter-group-not-shown has_group_selected">
+            <div class="filter-group my-0 p-y-05 filter-group-not-shown has_group_selected">
                 <p class="hidden">{{ pt_collection_text }}</p>
                 {% if show_pt_clear_text %}
                     <a class="filter-clear" href="/collections/all{% if current_tags %}/{{ current_tags | join: '+' }}{% endif %}">
