--- a/theme/templates/cart.liquid
+++ b/theme/templates/cart.liquid
@@ -1,63 +1,61 @@
-<div class="ah-container-fluid" data-cart-barba="data-cart-barba">
-  <div class="container-fluid">
-    <div rv-show="cart.item_count | gt 0">
-      <div class="row">
+<div class="container" data-cart-barba="data-cart-barba">
+  <div rv-show="cart.item_count | gt 0">
+    <div class="row">
 
-        <div class="hidden-xs hidden-sm col-md-3 col-lg-2 border right px-1 table-color">
-          <h3 class="text-weight-normal text-size-1-5">Wie wäre's noch mit ...</h3>
-          <div class="p-r-1">
-            <div class="row">
-              <div recomatic="cart" shop="{{shop.permanent_domain}}" product_ids="{{cart.items|map:'product'|map:'id'|join:','}}"></div>
-            </div>
+      <div class="hidden-xs hidden-sm col-md-3 col-lg-2 border right px-1 table-color">
+        <h3 class="text-weight-normal text-size-1-5">Wie wäre's noch mit ...</h3>
+        <div class="p-r-1">
+          <div class="row">
+            <div recomatic="cart" shop="{{shop.permanent_domain}}" product_ids="{{cart.items|map:'product'|map:'id'|join:','}}"></div>
           </div>
         </div>
+      </div>
 
-        <div class="col-xs-12 col-md-9 col-lg-10">
-          <div class="CartContainer">
+      <div class="col-xs-12 col-md-9 col-lg-10">
+        <div class="CartContainer">
 
-            <div>
-              <form action="/cart" method="post" class="row">
-                <div class="col-xs-12 pb-1">
-                  <h3>Warenkorb</h3>
-                  <input type="submit" name="checkout" value="Weiter zur Kasse" class="btn btn-primary pull-right" />
-                </div>
-                <div class="col-xs-12">
-                  <div class="border top px-1 table-color">
-                    {% assign place = 'cart-template' %}
-                    {% include 'cart' with place %}
-                    <div class="">
-                      {% include 'storepickup-changes' %}
-                      {% comment %}{% include 'storepickup-custom' %}{% endcomment %}
-                    </div>
+          <div>
+            <form action="/cart" method="post" class="row">
+              <div class="col-xs-12 pb-1">
+                <h3>Warenkorb</h3>
+                <input type="submit" name="checkout" value="Weiter zur Kasse" class="btn btn-primary pull-right" />
+              </div>
+              <div class="col-xs-12">
+                <div class="border top px-1 table-color">
+                  {% assign place = 'cart-template' %}
+                  {% include 'cart' with place %}
+                  <div class="">
+                    {% include 'storepickup-changes' %}
+                    {% comment %}{% include 'storepickup-custom' %}{% endcomment %}
                   </div>
                 </div>
-                <div class="col-xs-12 p-t-0">
-                  <input type="submit" name="checkout" value="Weiter zur Kasse" class="btn btn-primary pull-right" />
-                </div>
-              </form>
-            </div>
-            
+              </div>
+              <div class="col-xs-12 pt-0">
+                <input type="submit" name="checkout" value="Weiter zur Kasse" class="btn btn-primary pull-right" />
+              </div>
+            </form>
           </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="visible-xs-block visible-sm-block">
-          <h3 class="col-sm-12">Wie wäre's noch mit ...</h3>
-          <div recomatic="cart" shop="{{shop.permanent_domain}}" product_ids="{{cart.items|map:'product'|map:'id'|join:','}}"></div>
+          
         </div>
       </div>
     </div>
 
-    <div rv-show="cart.item_count | lt 1">
-      <div class="row">
-        <div class="col-xs-12 text-center">
-          <h2>{{ 'cart.general.empty' | t }}</h2>
-          <p>{{ 'cart.general.empty_message' | t }}</p>
-          <a href="/" class="btn btn-primary">{{ 'cart.general.continue' | t }}</a>
-        </div>
+    <div class="row">
+      <div class="visible-xs-block visible-sm-block">
+        <h3 class="col-sm-12">Wie wäre's noch mit ...</h3>
+        <div recomatic="cart" shop="{{shop.permanent_domain}}" product_ids="{{cart.items|map:'product'|map:'id'|join:','}}"></div>
       </div>
     </div>
-
   </div>
+
+  <div rv-show="cart.item_count | lt 1">
+    <div class="row">
+      <div class="col-xs-12 text-center">
+        <h2>{{ 'cart.general.empty' | t }}</h2>
+        <p>{{ 'cart.general.empty_message' | t }}</p>
+        <a href="/" class="btn btn-primary">{{ 'cart.general.continue' | t }}</a>
+      </div>
+    </div>
+  </div>
+
 </div>
