--- a/theme/templates/customers/account.liquid
+++ b/theme/templates/customers/account.liquid
@@ -1,6 +1,6 @@
 
-<div class="ah-container-fluid">
-    <div class="container-fluid">
+<div class="ah-container">
+    <div class="container">
         <div class="row">
 
             <div class="col-xs-12">
