--- a/theme/templates/customers/activate_account.liquid
+++ b/theme/templates/customers/activate_account.liquid
@@ -1,5 +1,5 @@
-<div class="ah-container-fluid">
-  <div class="container-fluid">
+<div class="ah-container">
+  <div class="container">
 
     <div class="row">
       <div class="col-xs-12 text-center">
