--- a/theme/templates/customers/addresses.liquid
+++ b/theme/templates/customers/addresses.liquid
@@ -1,5 +1,5 @@
-<div class="ah-container-fluid">
-    <div class="container-fluid">
+<div class="ah-container">
+    <div class="container">
 
         <div class="row">
 
