--- a/theme/templates/page.contact.liquid
+++ b/theme/templates/page.contact.liquid
@@ -1,6 +1,6 @@
-<div class="ah-container-fluid">
+<div class="ah-container">
   <div class="container">
-    <div class="rte p-y-1">
+    <div class="rte py-1">
       {{ page.content }}
     </div>
     {% include 'contact-form', contact_title: page.title %}
