--- a/theme/templates/page.designer.liquid
+++ b/theme/templates/page.designer.liquid
@@ -1,78 +1,77 @@
-<div class="ah-container-fluid">
-    <div class="container">
-        <div class="row">
 
-            <div class="col-xs-12">
-                <h1 class="text-center hidden">{{ page.title }}</h1>
-            </div>
+<div class="container">
+    <div class="row">
 
-            <div class="col-xs-12 rte">
-                {{ page.content }}
-            </div>
+        <div class="col-xs-12">
+            <h1 class="text-center hidden">{{ page.title }}</h1>
+        </div>
 
-            <div class="col-xs-12">
-                <div class="row">
-                    <div class="designer-dropdown-col col-xs-6 col-md-3 border px-1 right">
-                        <div class="m-x-05">
-                            <p class="title text-uppercase p-t-0 p-b-05 designer-col-1">Designer</p>
-                            {% for designerLink in linklists.designer-col-1.links %}
-                                <p class="text-size-1">
-                                    <a href="{{ designerLink.url }}" title="{{ designerLink.title }}">
-                                        <strong>{{ designerLink.title }}</strong>
-                                    </a>
-                                </p>
-                            {% endfor %}
+        <div class="col-xs-12 rte">
+            {{ page.content }}
+        </div>
+
+        <div class="col-xs-12">
+            <div class="row">
+                <div class="designer-dropdown-col col-xs-6 col-md-3 border px-1 right">
+                    <div class="m-x-05">
+                        <p class="title text-uppercase pt-0 pb-1 designer-col-1">Designer</p>
+                        {% for designerLink in linklists.designer-col-1.links %}
+                            <p class="text-size-1">
+                                <a href="{{ designerLink.url }}" title="{{ designerLink.title }}">
+                                    <strong>{{ designerLink.title }}</strong>
+                                </a>
+                            </p>
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="designer-dropdown-col col-xs-6 col-md-3 border px-1 right">
+                    <div class="m-x-05">
+                        {% assign menu-size = linklists.designer-col-2.links | size %}
+                        <p class="title text-uppercase pt-0 pb-1 designer-col-2">{{ linklists.designer-col-2.title | replace: '#', menu-size }}</p>
+                        {% for designerLink in linklists.designer-col-2.links %}
+                            <p class="text-size-1 ">
+                                <a href="{{ designerLink.url }}" title="{{ designerLink.title }}">
+                                    <strong>{{ designerLink.title }}</strong>
+                                </a>
+                                
+                            </p>
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="designer-dropdown-col col-xs-6 col-md-3 border px-1 right">
+                    <div class="m-x-05">
+                        <p class="title text-uppercase text-center pt-0 pb-1">{{ collections.top-designer-col-3.title }}</p>
+                        <div class="row">
+                            {% include 'featured-products',
+                                collectionHandle: 'top-designer-col-3',
+                                classWrapper: '',
+                                subtext1: settings.designer_col_3_subtext,
+                                textAlign: 'text-center',
+                                titleClass: 'text-sans-serif text-bold'
+                            %}
                         </div>
                     </div>
-                    <div class="designer-dropdown-col col-xs-6 col-md-3 border px-1 right">
-                        <div class="m-x-05">
-                            {% assign menu-size = linklists.designer-col-2.links | size %}
-                            <p class="title text-uppercase p-t-0 p-b-05 designer-col-2">{{ linklists.designer-col-2.title | replace: '#', menu-size }}</p>
-                            {% for designerLink in linklists.designer-col-2.links %}
-                                <p class="text-size-1 ">
-                                    <a href="{{ designerLink.url }}" title="{{ designerLink.title }}">
-                                        <strong>{{ designerLink.title }}</strong>
-                                    </a>
-                                    
-                                </p>
-                            {% endfor %}
-                        </div>
-                    </div>
-                    <div class="designer-dropdown-col col-xs-6 col-md-3 border px-1 right">
-                        <div class="m-x-05">
-                            <p class="title text-uppercase text-center p-t-0 p-b-05">{{ collections.top-designer-col-3.title }}</p>
-                            <div class="row">
-                                {% include 'featured-products',
-                                    collectionHandle: 'top-designer-col-3',
-                                    classWrapper: '',
-                                    subtext1: settings.designer_col_3_subtext,
-                                    textAlign: 'text-center',
-                                    titleClass: 'text-sans-serif text-bold'
-                                %}
-                            </div>
-                        </div>
-                    </div>
-                    <div class="designer-dropdown-col col-xs-6 col-md-3">
-                        <div class="m-x-05">
-                            <p class="title text-uppercase text-center p-t-0 p-b-05">{{ linklists.designer-col-4.title }}</p>
-                            <div class="row">
-                                {% include 'featured-collections',
-                                    featuredLinklist: 'designer-col-4',
-                                    withOffset: false,
-                                    showHr: false,
-                                    classWrapperDefault: '',
-                                    classWrapperSize2: '',
-                                    replaceImage1: settings.designer_col_4_custom_image,
-                                    replaceImage1With: 'designer_col_4_custom_image.jpeg',
-                                    replaceImage2: false,
-                                    replaceImage2With: '',
-                                %}
-                            </div>
+                </div>
+                <div class="designer-dropdown-col col-xs-6 col-md-3">
+                    <div class="m-x-05">
+                        <p class="title text-uppercase text-center pt-0 pb-1">{{ linklists.designer-col-4.title }}</p>
+                        <div class="row">
+                            {% include 'featured-collections',
+                                featuredLinklist: 'designer-col-4',
+                                withOffset: false,
+                                showHr: false,
+                                classWrapperDefault: '',
+                                classWrapperSize2: '',
+                                replaceImage1: settings.designer_col_4_custom_image,
+                                replaceImage1With: 'designer_col_4_custom_image.jpeg',
+                                replaceImage2: false,
+                                replaceImage2With: '',
+                            %}
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
+
     </div>
 </div>
