--- a/theme/templates/page.designer_a-z.liquid
+++ b/theme/templates/page.designer_a-z.liquid
@@ -1,4 +1,4 @@
-<div class="ah-container-fluid">
+<div class="ah-container">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
