--- a/theme/templates/page.law.liquid
+++ b/theme/templates/page.law.liquid
@@ -1,12 +1,10 @@
-<div class="ah-container-fluid">
-    <div class="container">
-        <div class="row p-y-1">
-            <div class="col-xs-12">
-                <h1 class="text-center hidden">{{ page.title }}</h1>
-            </div>
-            <div class="col-xs-12 rte">
-                {{ page.content }}
-            </div>
+<div class="container">
+    <div class="row py-1">
+        <div class="col-xs-12">
+            <h1 class="text-center hidden">{{ page.title }}</h1>
+        </div>
+        <div class="col-xs-12 rte">
+            {{ page.content }}
         </div>
     </div>
 </div>
