--- a/theme/templates/page.social_commitment.liquid
+++ b/theme/templates/page.social_commitment.liquid
@@ -1,13 +1,11 @@
-<div class="ah-container-fluid">
-  <div class="container-fluid">
-    <div class="m-t-1">
-      <div class="bg-tan text-center p-y-3">
-        <div class="row p-y-3">
-          <div class="col-xs-12 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
-            <h1>{{ page.title }}</h1>
-            <p class="rte">{{ page.content }}</p>
-            <p><a href="mailto:{{social_com­mit­ment_email}}">{{settings.social_commitment_email}}</a></p>
-          </div>
+<div class="container">
+  <div class="mt-1">
+    <div class="bg-tan text-center py-3">
+      <div class="row py-3">
+        <div class="col-xs-12 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
+          <h1>{{ page.title }}</h1>
+          <p class="rte">{{ page.content }}</p>
+          <p><a href="mailto:{{social_com­mit­ment_email}}">{{settings.social_commitment_email}}</a></p>
         </div>
       </div>
     </div>
