--- a/theme/templates/page.wishlist-shared.liquid
+++ b/theme/templates/page.wishlist-shared.liquid
@@ -2,17 +2,15 @@
 {{ 'option_selection.js' | shopify_asset_url | script_tag }}
 {% endcomment %}
 
-<div class="ah-container-fluid">
-  <div class="container-fluid">
-    <div id="wishlist-king" class="row">
+<div class="container">
+  <div id="wishlist-king" class="row">
 
-        <div class="col-xs-12">
-            <h1>{{ page.title }}</h1>
-            {{ page.content }}
+      <div class="col-xs-12">
+          <h1>{{ page.title }}</h1>
+          {{ page.content }}
 
-            <!-- include 'wishlist-shared' -->
+          <!-- include 'wishlist-shared' -->
 
-        </div>
-    </div>
+      </div>
   </div>
 </div>
