--- a/theme/templates/search.liquid
+++ b/theme/templates/search.liquid
@@ -12,69 +12,67 @@ applied to the elements on this page; the 'searchresults' id is used in the CSS
 selectors inside search.css.
 {% endcomment %}
 
-<div class="ah-container-fluid">
-  <div class="container-fluid">
-    <div id="searchresults" class="p-y-1">
-      
+<div class="container">
+  <div id="searchresults" class="py-1">
+    
+    <div class="row">
+      <div class="col-xs-12 col-md-6 col-md-offset-3 text-center">
+        <form action="/search" method="get" class="search-form form-inline mb-1" role="search">
+          <div class="form-group">
+            <input name="q" type="search" class="form-control" id="search-field" placeholder="{{ 'navbar.shop_actions.search' | t }}" value="{{ search.terms | escape }}" />
+          </div>
+          <div class="form-group">
+            <input type="submit" class="btn btn-primary" id="search-submit" value="{{ 'navbar.shop_actions.search' | t }}" />
+          </div>
+        </form>
+      </div>
+    </div>
+    
+    {% if search.performed %}
+
       <div class="row">
-        <div class="col-xs-12 col-md-6 col-md-offset-3 text-center">
-          <form action="/search" method="get" class="search-form form-inline mb-1" role="search">
-            <div class="form-group">
-              <input name="q" type="search" class="form-control" id="search-field" placeholder="{{ 'navbar.shop_actions.search' | t }}" value="{{ search.terms | escape }}" />
-            </div>
-            <div class="form-group">
-              <input type="submit" class="btn btn-primary" id="search-submit" value="{{ 'navbar.shop_actions.search' | t }}" />
-            </div>
-          </form>
+        <div class="col-xs-12">
+      
+          {% paginate search.results by 48 %}            
+              <div class="row">
+                {% assign article_length = 0 %}
+                {% assign page_length = 0 %}
+                {% assign product_length = 0 %}
+                {% for product in search.results %}
+                  {% if product.object_type == 'article' %}
+                    {% comment %}
+                      ARTICLE
+                    {% endcomment %}
+                    {% assign article_length = article_length | plus: 1 %}
+                    {% elsif product.object_type == 'page' %}
+                    {% comment %}
+                      PAGE
+                    {% endcomment %}
+                    {% assign page_length = page_length | plus: 1 %}
+                    {% else %}
+                    {% comment %}
+                      PRODUCT
+                    {% endcomment %}
+                    {% assign product_length = product_length | plus: 1 %}
+                    <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
+                      {% include 'product-grid-item' with settings.products_per_page %}
+                    </div>
+                  {% endif %}
+                {% endfor %}
+                {% if product_length == 0 %}  
+                  <p class="text-center py-2">No products found for your search "{{ search.terms }}".</p>
+                {% else %}
+              </div>
+            {% endif %}    
+            
+            {% include 'pagination' %}
+          
+          {% endpaginate %}  
+
         </div>
       </div>
-      
-      {% if search.performed %}
 
-        <div class="row">
-          <div class="col-xs-12">
-        
-            {% paginate search.results by 48 %}            
-                <div class="row">
-                  {% assign article_length = 0 %}
-                  {% assign page_length = 0 %}
-                  {% assign product_length = 0 %}
-                  {% for product in search.results %}
-                    {% if product.object_type == 'article' %}
-                      {% comment %}
-                        ARTICLE
-                      {% endcomment %}
-                      {% assign article_length = article_length | plus: 1 %}
-                     {% elsif product.object_type == 'page' %}
-                      {% comment %}
-                        PAGE
-                      {% endcomment %}
-                      {% assign page_length = page_length | plus: 1 %}
-                     {% else %}
-                      {% comment %}
-                        PRODUCT
-                      {% endcomment %}
-                      {% assign product_length = product_length | plus: 1 %}
-                      <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
-                        {% include 'product-grid-item' with settings.products_per_page %}
-                      </div>
-                    {% endif %}
-                  {% endfor %}
-                  {% if product_length == 0 %}  
-                    <p class="text-center p-y-2">Für dein Suchbegriff "{{ search.terms }}" konnte kein Produkt gefunden werden.</p>
-                  {% else %}
-                </div>
-              {% endif %}    
-              
-              {% include 'pagination' %}
-            
-            {% endpaginate %}  
+    {% endif %}  
 
-          </div>
-        </div>
-
-      {% endif %}  
-
-    </div>
   </div>
 </div>
